fixed spacing issue and removed text header

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -55,5 +55,6 @@ section{
 
 
 button {
-  background: #111358;
+  background: #00C399;
+  margin: 2rem auto;
 }
